<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySecureApp</string>
    <string name="action_settings">Settings</string>
    <string name="HelloText">Witaj w aplikacji MySecureApp!</string>
    <string name="Button_Register">Zarajestruj się</string>
    <string name="Button_LogIn">Zaloguj się</string>
    <string name="Have_account_Text">Masz już konto?</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login_txt">Login:</string>
    <string name="title_activity_options_menu">Menu</string>
    <string name="show_position_gps">Pokaż pozycję GPS</string>
    <string name="show_position_BTS">Pokaż pozycję z sieci</string>
    <string name="show_tel_nbr">Pokaz numer telefonu</string>
    <string name="delete_sms">Usuń wszystkie smsy</string>
    <string name="latest_choosen_nbrs">Ostatnio wybierane numery</string>
    <string name="title_activity_gps_position">GPS_position</string>

</resources>
