<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mysecureapp.Options_menu" >

    <Button
        android:id="@+id/show_network_positions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="16dp"
        android:text="@string/show_position_BTS" />

    <Button
        android:id="@+id/latest_nbrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:text="@string/latest_choosen_nbrs" />

    <Button
        android:id="@+id/show_tel_nbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="14dp"
        android:text="@string/show_tel_nbr" />

    <Button
        android:id="@+id/delete_all_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latest_nbrs"
        android:layout_alignRight="@+id/show_tel_nbr"
        android:layout_marginBottom="17dp"
        android:text="@string/delete_sms" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_all_sms"
        android:layout_alignLeft="@+id/delete_all_sms"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/show_GPS_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/show_network_positions"
        android:layout_marginTop="17dp"
        android:text="@string/show_position_gps" />

</RelativeLayout>
